# native-net-assembly-load-sample

./: .gitignore  README.md  build.ps1
src/: MicroEngine.sln
src/Game/: Consolio.cs  Game.csproj  MapComponent.cs  MapComponents.cs  PlayerControllerComponent.cs
src/Game/Properties/: launchSettings.json
src/SandboxSDKLoader/: Program.cs  SandboxSDKLoader.csproj
src/host/MicroEngine/: Application.cpp  Application.h  CMakeLists.txt  CMakePresets.json  Component.h  ConsoleRenderer.cpp  ConsoleRenderer.h  Engine.cpp  Engine.h  EngineAPI.cpp  EngineAPI.h  EngineObjects.h  FrameBuffer.cpp  FrameBuffer.h  GameObject.h  InputSystem.cpp  InputSystem.h  NetRuntimeHost.cpp  NetRuntimeHost.h  Scene.cpp  Scene.h
src/host/MicroEngine/App/: Application.cpp  CMakeLists.txt  main.cpp
src/host/MicroEngine/Engine/: CMakeLists.txt  ConsoleRenderer.cpp  ConsoleRenderer.h  Engine.cpp  Engine.h  EngineAPI.cpp  EngineAPI.h  FrameBuffer.h  GameObject.cpp  GameObject.h  InputSystem.cpp  NetRuntimeHost.cpp  NetRuntimeHost.h  Scene.cpp  Scene.h
src/sdk/: Component.cs  ComponentRegistry.cs  ConsoleTransform.cs  DataTypes.cs  Engine.cs  EngineAPI.cs  EngineAPINative.cs  GameObject.cs  IGameEntry.cs  Input.cs  MicroEngineSDK.csproj  NativeObjectWrapper.cs  RenderInfo.cs  Scene.cs
